# dynare-michel

./: .gitignore  .gitmodules  Makefile  Makefile.am  Makefile.in  NEWS  README.extended-preprocessor.org  README.md  aclocal.m4  configure  configure.ac  dynare.el  dynare.nsi  license.txt  uncrustify.cfg
doc/: DynareKalman.TeX  Makefile  Makefile.am  Makefile.in  bibmad.sty  bvar-a-la-sims.tex  dr.bib  dr.tex  dynare.texi  dynare.xsl  dynare_fo.xsl  dynare_fo_fop.xsl  dynare_html.xsl  dynare_lists.xsl  guide.bbl  guide.blg  guide.tex  makefile  manual.xml  unit_roots.tex
doc/AIM/: Dynare AIM use Doc.html  Dynare AIM use Doc.mht  Dynare AIM use Doc.tex
doc/gsa/: Makefile.am  gsa.tex  marco.bib  marco.bib.bak
doc/internals/: Makefile.am  build_internal_documentation.m  dynare-internals.org  internals.texi
doc/macroprocessor/: Makefile  Makefile.am  Makefile.in  macroprocessor.tex
doc/parallel/: Makefile.am  marco.bib  parallel.tex
doc/preprocessor/: Makefile  Makefile.am  Makefile.in  expr-sharing.dia  expr.dia  matrices.dia  overview.dia  preprocessor.tex
doc/userguide/: DynareBib.bib  Makefile  Makefile.am  Makefile.in  UserGuide.tex  appendix.aux  appendix.tex  ch-estadv.aux  ch-estadv.tex  ch-estbase.aux  ch-estbase.tex  ch-estbeh.tex  ch-inst.aux  ch-inst.blg  ch-inst.tex  ch-intro.aux  ch-intro.tex  ch-pref.aux  ch-ramsey.aux  ch-ramsey.tex  ch-soladv.aux  ch-soladv.tex  ch-solbase-rev1.tex  ch-solbase.aux  ch-solbase.tex  ch-solbeh.tex  ch-trouble.tex  ch_pref.tex  test.tex
dynare++/kord/: Makefile  Makefile.am  approximation.cweb  approximation.hweb  decision_rule.cweb  decision_rule.hweb  dynamic_model.cweb  dynamic_model.hweb  faa_di_bruno.cweb  faa_di_bruno.hweb  first_order.cweb  first_order.hweb  global_check.cweb  global_check.hweb  journal.cweb  journal.hweb  kord_exception.hweb  korder.cweb  korder.hweb  korder_stoch.cweb  korder_stoch.hweb  main.web  mersenne_twister.hweb  normal_conjugate.cweb  normal_conjugate.hweb  random.cweb  random.hweb  tests.cpp
dynare++/src/: Makefile  Makefile.am  dynare3.cpp  dynare3.h  dynare_atoms.cpp  dynare_atoms.h  dynare_exception.h  dynare_model.cpp  dynare_model.h  dynare_params.cpp  dynare_params.h  dynglob.lex  dynglob.y  forw_subst_builder.cpp  main.cpp  nlsolve.cpp  nlsolve.h  planner_builder.cpp  planner_builder.h
mex/sources/: Makefile.am  build.m  build_matlab.m  build_matlab_debian.m  build_matlab_multithread.m  build_octave.m  dynblas.h  dynlapack.h  dynmex.h  dynumfpack.h  matlab_versions_compatibility.h
preprocessor/: BlockTriangular.cc  BlockTriangular.hh  CodeInterpreter.hh  ComputingTasks.cc  ComputingTasks.hh  ConfigFile.cc  ConfigFile.hh  DataTree.cc  DataTree.hh  Doxyfile  DynamicModel.cc  DynamicModel.hh  DynareBison.yy  DynareFlex.ll  DynareMain.cc  DynareMain2.cc  DynareOutput.hh  ExprNode.cc  ExprNode.hh  ExternalFiles.cc  ExternalFiles.hh  ExternalFunctionsTable.cc  ExternalFunctionsTable.hh  IncidenceMatrix.cc  IncidenceMatrix.hh  InidenceMatrix.cc  InterfaceMatlab.cc  InterfaceScilab.cc  Makefile  Makefile.am  Makefile.in  Makefile.include  MatlabFile.cc  MatlabFile.hh  MinimumFeedbackSet.cc  MinimumFeedbackSet.hh  ModFile.cc  ModFile.hh  ModelBlocks.cc  ModelBlocks.hh  (+35 more)
preprocessor/include/: BlockTriangular.hh  CodeInterpreter.hh  ComputingTasks.hh  DataTree.hh  ExprNode.hh  IncidenceMatrix.hh  MatlabFile.hh  ModFile.hh  ModelBlocks.hh  ModelNormalization.hh  ModelTree.hh  Model_Graph.hh  NumericalConstants.hh  NumericalInitialization.hh  ParsingDriver.hh  Shocks.hh  Statement.hh  SymbolGaussElim.hh  SymbolTable.hh  TmpSymbolTable.hh  VariableTable.hh
preprocessor/macro/: MacroBison.yy  MacroDriver.cc  MacroDriver.hh  MacroFlex.ll  MacroValue.cc  MacroValue.hh  Makefile  Makefile.am
tests/: .gitignore  Makefile  Makefile.am  Makefile.in  comments.mod  deterministic_model_purely_forward.mod  dsge_base2.mod  dynseries_test_data.m  example1.mod  example1_abs_sign.mod  example1_irf_shocks.mod  example1_macroif.mod  example1_use_dll.mod  example1_varexo_det.mod  example1_with_tags.mod  example2.mod  fs2000_nonstationary.mod  fs2000_ssfile.mod  fs2000_ssfile_aux.m  histval_det.mod  histval_sto.mod  printMakeCheckErrMsg.m  printMakeCheckMatlabErrMsg.m  printMakeCheckOctaveErrMsg.m  ramst.mod  ramst_a.mod  ramst_initval_file.mod  ramst_initval_file_data.m  ramst_normcdf_and_friends.mod  ramst_static_tag.mod  ramst_steady_state.mod  ramst_vec.mod  ramst_xfail.mod  read_trs_files.sh  run_block_byte_tests_matlab.m  run_block_byte_tests_octave.m  run_reporting_test_matlab.m  run_reporting_test_octave.m  run_test.m  run_test_matlab.m  (+13 more)
tests/AIM/: fs2000_b1L1L.mod  fs2000_b1L1L_AIM.mod  fs2000_b1L1L_steadystate.m  fs2000x10L9_L.mod  fs2000x10L9_L_AIM.mod  fs2000x10_L9_L.mod  fs2000x10_L9_L_AIM.mod  ls2003_2L0L.mod  ls2003_2L0L_AIM.mod  ls2003_2L2L.mod  ls2003_2L2L_AIM.mod
tests/analytic_derivatives/: ls2003.mod
tests/arima/: mod1.mod  mod1a.mod  mod1b.mod  mod1c.mod  mod2.mod  mod2a.mod  mod2b.mod  mod2c.mod  mod3a.mod
tests/auxiliary_variables/: test1.mod  test2.mod
tests/block_bytecode/: example1_varexo_det_bytecode.mod  fs2000_bicgstab.mod  fs2000_block_bytecode.mod  fs2000_bytecode.mod  fs2000_common.mod  fs2000_gmres.mod  fs2000_lu.mod  fs2000_optpath.mod  fs2000_simk.mod  ireland.mod  ls2003.mod  mod1.mod  multimod.mod  ramst.mod  ramst_a.mod  ramst_normcdf_and_friends.mod  ramst_steady_state.mod  run_block_bytecode_tests.m  run_ls2003.m
tests/bvar_a_la_sims/: bvar_and_dsge.mod  bvar_sample.m  bvar_standalone.mod  test.xls
tests/conditional_forecasts/: fs2000.mod  fs2000_cal.mod  fs2000_est.mod
tests/conditional_variance_decomposition/: example1.mod
tests/data/: mod1a.mod
tests/deterministic_simulations/: deterministic_model_purely_backward.mod  rbc_det1.mod  rbc_det2.mod  rbc_det3.mod  rbc_det4.mod  rbc_det5.mod
tests/discretionary_policy/: dennis_1.mod
tests/dsge-var/: dsgevar_forward_calibrated_lambda.mod  dsgevar_forward_estimated_lambda.mod  simul_hybrid.mod
tests/ep/: ar.mod  ar_steadystate.m  burnside.mod  exact_solution.m  linear.mod  rbc.mod  rbc2.mod  (+5 more)
(+2841 files in other folders)
